HABIT COMMIT